added stop cntl & routes
